Make sure all project flex sections are same height for carousel, and changed formatting on smaller screen sizes

--- a/resources/style.css
+++ b/resources/style.css
@@ -119,20 +119,23 @@ h2 {
     display: flex;
     justify-content: space-between;
     padding: 1rem 0;
+    height: 35.625rem;
+    height: 22rem;
     /* flex-wrap: wrap; */
 }
 
 .project-flex div {
     /* width: 60%; */
     padding-right: 1rem;
-    flex: 1;
-    /* width: 50%; */
+    /* flex: 1; */
+    width: 50%;
 }
 
 .project-flex img {
     border-radius: 0.625rem;
     width: 20.1875rem;
-    /* flex: 1; */
+    height: fit-content;
+    flex: 0 1;
 }
 
 .carousel-item {
@@ -140,7 +143,7 @@ h2 {
 }
 
 .carousel-item-selected {
-    display: block;
+    display: flex;
 }
 
 .carousel-nav {
@@ -260,16 +263,27 @@ footer span {
     main {
         font-size: 14px;
     }
+
+    h2 {
+        margin: auto;
+        width: 80%;
+        text-align: center;
+    }
+    
     .project-flex {
         display: flex;
         justify-content: space-between;
         padding: 1rem 0;
         flex-wrap: wrap;
+        height: fit-content;
+        align-items: center;
+        flex-direction: column;
     }
     
     .project-flex div {
-        /* width: 60%; */
+        width: 60%;
         padding-right: 1rem;
+        text-align: center;
         /* flex: 1; */
         /* width: 50%; */
     }
@@ -281,6 +295,7 @@ footer span {
         object-fit: contain;
         /* flex: 1; */
     }
+
 }
 
 /* 650 x 840 */
